unpackaged/main/default/objects/Product_Conversation_Analysis__e/Product_Conversation_Analysis__e.object-meta.xml
<CustomObject>
    <label>Product Conversation Analysis</label>
    <pluralLabel>Product Conversation Analysis</pluralLabel>
</CustomObject>