unpackaged/main/default/objects/Product_Conversation_Analysis__e/fields/InterviewId__c.field-meta.xml
<CustomField>
    <fullName>InterviewId__c</fullName>
    <label>InterviewId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>