unpackaged/main/default/objects/Product_Conversation_Analysis__e/fields/Primary_Participant_ID__c.field-meta.xml
<CustomField>
    <fullName>Primary_Participant_ID__c</fullName>
    <label>Primary Participant ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>