unpackaged/main/default/objects/Product_Conversation_Analysis__e/fields/Product_Conversation_ID__c.field-meta.xml
<CustomField>
    <fullName>Product_Conversation_ID__c</fullName>
    <label>Product Conversation ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>