unpackaged/main/default/objects/Product_Conversation_Analysis__e/fields/Question_1_Answer__c.field-meta.xml
<CustomField>
    <fullName>Question_1_Answer__c</fullName>
    <label>Question 1 Answer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>