unpackaged/main/default/objects/Product_Conversation_Analysis__e/fields/Question_4_Answer__c.field-meta.xml
<CustomField>
    <fullName>Question_4_Answer__c</fullName>
    <label>Question 4 Answer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>