unpackaged/main/default/objects/Product_Conversation_Analysis__e/fields/Sentiment__c.field-meta.xml
<CustomField>
    <fullName>Sentiment__c</fullName>
    <label>Sentiment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>