unpackaged/main/default/objects/Product_Conversation_Analysis__e/fields/Sentiment_Resoning__c.field-meta.xml
<CustomField>
    <fullName>Sentiment_Resoning__c</fullName>
    <label>Sentiment Resoning</label>
    <length>255</length>
    <type>Text</type>
</CustomField>